Fixed demo styles & windows scrollbars

--- a/docs/components/example/styles.css
+++ b/docs/components/example/styles.css
@@ -1,25 +1,22 @@
-/* 
-TODO: this broke the "plain" code blocks in docs files that don't have an example
-pre {
+.demo pre {
     background-color: transparent !important;
     margin: 0 !important;
     padding: 0 !important;
 }
 
-code > span {
+.demo code > span {
     padding: 0 !important;
 }
 
-code > span:last-child {
+.demo code > span:last-child {
     display: none;
 }
 
-.bn-container, .bn-editor {
-
+.demo .bn-container, .demo .bn-editor {
     box-shadow: none !important;
-    min-height: 16rem;
+    height: 100%;
 }
 
-.bn-editor {
-    padding-block: 1rem
-} */
+.demo .bn-editor {
+    padding-block: 1rem;
+}
